Extended gain range, added lut_fixed_mode command
- The gain is now 32 bit wide to support cameras with digital gain
- Added lut_fixed_mode command and UI elements in the lut box to control
  it
- In fixed mode or fast gamma mode the lut plot no longer shows scatter
  symbols

--- a/dct_widgets/inoutbox/inoutbox.ui
+++ b/dct_widgets/inoutbox/inoutbox.ui
@@ -57,7 +57,7 @@
          </size>
         </property>
         <property name="text">
-         <string>Shutter Time</string>
+         <string>Shutter Time in µs</string>
         </property>
        </widget>
       </item>
