--- a/dct_widgets/inoutbox/inoutbox.ui
+++ b/dct_widgets/inoutbox/inoutbox.ui
@@ -491,56 +491,7 @@
          </widget>
         </item>
         <item row="0" column="2">
-         <layout class="QHBoxLayout" name="horizontalLayout_2">
-          <item>
-           <widget class="QLabel" name="lblSegmentationMode">
-            <property name="minimumSize">
-             <size>
-              <width>130</width>
-              <height>0</height>
-             </size>
-            </property>
-            <property name="maximumSize">
-             <size>
-              <width>130</width>
-              <height>16777215</height>
-             </size>
-            </property>
-            <property name="text">
-             <string>Mode</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QComboBox" name="cbxSegmentationMode">
-            <property name="minimumSize">
-             <size>
-              <width>170</width>
-              <height>0</height>
-             </size>
-            </property>
-            <property name="maximumSize">
-             <size>
-              <width>16777215</width>
-              <height>16777215</height>
-             </size>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <spacer name="horizontalSpacer_4">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>40</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-         </layout>
+         <layout class="QHBoxLayout" name="horizontalLayout_2"/>
         </item>
         <item row="0" column="0">
          <widget class="QLabel" name="lblLscEnable">
@@ -1074,7 +1025,6 @@ Note: This will only hold the timecode in the SDI output, the timecode on the de
   <tabstop>rdbTaf50Hz</tabstop>
   <tabstop>rdbTaf60Hz</tabstop>
   <tabstop>cbxLscEnable</tabstop>
-  <tabstop>cbxSegmentationMode</tabstop>
   <tabstop>sbxK</tabstop>
   <tabstop>sbxOffset</tabstop>
   <tabstop>sbxSlope</tabstop>
