Bugfixes for device name and cooper device
- Fixed a bug that caused a crash when the device name was changed when
  manual connection was used
- DPCC box now only shows the reduced DPCC feature set for cooper devices
- Added DPCC and Knee interfaces to cooper device

--- a/dct_widgets/dpccbox/dpccbox.ui
+++ b/dct_widgets/dpccbox/dpccbox.ui
@@ -41,7 +41,7 @@
            </widget>
           </item>
           <item>
-           <widget class="Line" name="line_3">
+           <widget class="Line" name="lineTop">
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
             </property>
@@ -126,7 +126,7 @@
            </widget>
           </item>
           <item>
-           <widget class="Line" name="line_2">
+           <widget class="Line" name="lineBottom">
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
             </property>
@@ -221,7 +221,7 @@
         </spacer>
        </item>
        <item>
-        <widget class="QLabel" name="label">
+        <widget class="QLabel" name="lblInformation">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
            <horstretch>0</horstretch>
