--- a/dct_widgets/updatebox/updatebox.ui
+++ b/dct_widgets/updatebox/updatebox.ui
@@ -173,16 +173,77 @@
    <item>
     <widget class="QGroupBox" name="gbpUpdateProcess">
      <property name="title">
-      <string>Update Process</string>
+      <string>Firmware Update Process</string>
      </property>
      <layout class="QGridLayout" name="gridLayout">
-      <item row="2" column="5">
-       <widget class="QCheckBox" name="cbxVerify">
+      <item row="2" column="1">
+       <widget class="QLabel" name="lblVerify">
+        <property name="minimumSize">
+         <size>
+          <width>50</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>16777215</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>Verify</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="1">
+       <widget class="QLabel" name="lblUpdateCount">
+        <property name="text">
+         <string>Progress</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="8">
+       <widget class="QPushButton" name="btnFilename">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>16777215</height>
+         </size>
+        </property>
         <property name="focusPolicy">
          <enum>Qt::StrongFocus</enum>
         </property>
         <property name="text">
-         <string/>
+         <string>Open Files</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="5">
+       <widget class="QProgressBar" name="progressBar">
+        <property name="value">
+         <number>24</number>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="8">
+       <widget class="QPushButton" name="btnRun">
+        <property name="focusPolicy">
+         <enum>Qt::StrongFocus</enum>
+        </property>
+        <property name="text">
+         <string>Update</string>
         </property>
        </widget>
       </item>
@@ -205,54 +266,13 @@
         </property>
        </widget>
       </item>
-      <item row="3" column="8">
-       <widget class="QPushButton" name="btnRun">
+      <item row="2" column="5">
+       <widget class="QCheckBox" name="cbxVerify">
         <property name="focusPolicy">
          <enum>Qt::StrongFocus</enum>
         </property>
         <property name="text">
-         <string>Update</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="1">
-       <widget class="QLabel" name="lblVerify">
-        <property name="minimumSize">
-         <size>
-          <width>50</width>
-          <height>0</height>
-         </size>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>16777215</width>
-          <height>16777215</height>
-         </size>
-        </property>
-        <property name="text">
-         <string>Verify</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="8">
-       <widget class="QPushButton" name="btnFilename">
-        <property name="minimumSize">
-         <size>
-          <width>25</width>
-          <height>25</height>
-         </size>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>25</width>
-          <height>25</height>
-         </size>
-        </property>
-        <property name="focusPolicy">
-         <enum>Qt::StrongFocus</enum>
-        </property>
-        <property name="text">
-         <string>...</string>
+         <string/>
         </property>
        </widget>
       </item>
@@ -266,17 +286,20 @@
         </property>
        </widget>
       </item>
-      <item row="3" column="5">
-       <widget class="QProgressBar" name="progressBar">
-        <property name="value">
-         <number>24</number>
+      <item row="1" column="1">
+       <widget class="QLabel" name="lblFiletype">
+        <property name="text">
+         <string>File Description</string>
         </property>
        </widget>
       </item>
-      <item row="3" column="1">
-       <widget class="QLabel" name="lblUpdateCount">
-        <property name="text">
-         <string>Progress</string>
+      <item row="1" column="5">
+       <widget class="QLineEdit" name="letFiletype">
+        <property name="focusPolicy">
+         <enum>Qt::NoFocus</enum>
+        </property>
+        <property name="readOnly">
+         <bool>true</bool>
         </property>
        </widget>
       </item>
