--- a/dct_widgets/updatebox/updatebox.ui
+++ b/dct_widgets/updatebox/updatebox.ui
@@ -171,12 +171,83 @@
     </widget>
    </item>
    <item>
+    <widget class="QGroupBox" name="groupBox">
+     <property name="title">
+      <string>Online Update</string>
+     </property>
+     <layout class="QGridLayout" name="gridLayout_2">
+      <item row="1" column="1">
+       <widget class="QLineEdit" name="letCurrentVersion">
+        <property name="readOnly">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0">
+       <widget class="QLabel" name="lblServerVersion">
+        <property name="text">
+         <string>Latest Version on Server</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QLineEdit" name="letServerVersion">
+        <property name="readOnly">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="lblCurrentVersion">
+        <property name="text">
+         <string>Current Firmware Version</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="2">
+       <widget class="QPushButton" name="btnCheckUpdate">
+        <property name="text">
+         <string>Check Server for new Firmware</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
     <widget class="QGroupBox" name="gbpUpdateProcess">
      <property name="title">
       <string>Firmware Update Process</string>
      </property>
      <layout class="QGridLayout" name="gridLayout">
+      <item row="5" column="8">
+       <widget class="QPushButton" name="btnRun">
+        <property name="focusPolicy">
+         <enum>Qt::StrongFocus</enum>
+        </property>
+        <property name="text">
+         <string>Update</string>
+        </property>
+       </widget>
+      </item>
       <item row="2" column="1">
+       <widget class="QLabel" name="lblFiletype">
+        <property name="text">
+         <string>File Description</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="5">
+       <widget class="QCheckBox" name="cbxVerify">
+        <property name="focusPolicy">
+         <enum>Qt::StrongFocus</enum>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="1">
        <widget class="QLabel" name="lblVerify">
         <property name="minimumSize">
          <size>
@@ -195,14 +266,17 @@
         </property>
        </widget>
       </item>
-      <item row="4" column="1">
-       <widget class="QLabel" name="lblUpdateCount">
-        <property name="text">
-         <string>Progress</string>
+      <item row="2" column="5">
+       <widget class="QLineEdit" name="letFiletype">
+        <property name="focusPolicy">
+         <enum>Qt::NoFocus</enum>
+        </property>
+        <property name="readOnly">
+         <bool>true</bool>
         </property>
        </widget>
       </item>
-      <item row="0" column="8">
+      <item row="1" column="8">
        <widget class="QPushButton" name="btnFilename">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
@@ -230,24 +304,17 @@
         </property>
        </widget>
       </item>
-      <item row="4" column="5">
-       <widget class="QProgressBar" name="progressBar">
-        <property name="value">
-         <number>24</number>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="8">
-       <widget class="QPushButton" name="btnRun">
+      <item row="1" column="5">
+       <widget class="QLineEdit" name="letFilename">
         <property name="focusPolicy">
-         <enum>Qt::StrongFocus</enum>
+         <enum>Qt::NoFocus</enum>
         </property>
-        <property name="text">
-         <string>Update</string>
+        <property name="readOnly">
+         <bool>true</bool>
         </property>
        </widget>
       </item>
-      <item row="0" column="1">
+      <item row="1" column="1">
        <widget class="QLabel" name="lblFilename">
         <property name="minimumSize">
          <size>
@@ -266,40 +333,17 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="5">
-       <widget class="QCheckBox" name="cbxVerify">
-        <property name="focusPolicy">
-         <enum>Qt::StrongFocus</enum>
-        </property>
+      <item row="5" column="1">
+       <widget class="QLabel" name="lblUpdateCount">
         <property name="text">
-         <string/>
+         <string>Progress</string>
         </property>
        </widget>
       </item>
-      <item row="0" column="5">
-       <widget class="QLineEdit" name="letFilename">
-        <property name="focusPolicy">
-         <enum>Qt::NoFocus</enum>
-        </property>
-        <property name="readOnly">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1">
-       <widget class="QLabel" name="lblFiletype">
-        <property name="text">
-         <string>File Description</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="5">
-       <widget class="QLineEdit" name="letFiletype">
-        <property name="focusPolicy">
-         <enum>Qt::NoFocus</enum>
-        </property>
-        <property name="readOnly">
-         <bool>true</bool>
+      <item row="5" column="5">
+       <widget class="QProgressBar" name="progressBar">
+        <property name="value">
+         <number>24</number>
         </property>
        </widget>
       </item>
