Removed BT.601 and SMPTE 240M color conversion matrices, added BT.2020 matrix
- The BT.601 (SD) and SMPTE 240M (NTSC) color conversion matrices are not used
  for HD content and this deprecated. They have been removed from the outbox tab
- Added BT.2020 color conversion matrix to the outbox tab which is used for UHD
  and HDR content

--- a/dct_widgets/outbox/outbox.ui
+++ b/dct_widgets/outbox/outbox.ui
@@ -689,8 +689,8 @@
    </item>
    <item>
     <layout class="QGridLayout" name="gridLayout_4">
-     <item row="0" column="1">
-      <widget class="QGroupBox" name="gbxStandards">
+     <item row="1" column="1">
+      <widget class="QGroupBox" name="gbxSdiOutput">
        <property name="minimumSize">
         <size>
          <width>0</width>
@@ -698,14 +698,14 @@
         </size>
        </property>
        <property name="title">
-        <string>RGB to YCbCr</string>
+        <string>SDI Output</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
        </property>
-       <layout class="QGridLayout" name="gridLayout_3">
+       <layout class="QGridLayout" name="gridLayout_2">
         <item row="0" column="0">
-         <widget class="QPushButton" name="btnRec709">
+         <widget class="QComboBox" name="cbxSdiMode">
           <property name="minimumSize">
            <size>
             <width>180</width>
@@ -714,30 +714,11 @@
           </property>
           <property name="focusPolicy">
            <enum>Qt::StrongFocus</enum>
-          </property>
-          <property name="text">
-           <string>Rec.709</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="0">
-         <widget class="QPushButton" name="btnBt601">
-          <property name="minimumSize">
-           <size>
-            <width>180</width>
-            <height>0</height>
-           </size>
-          </property>
-          <property name="focusPolicy">
-           <enum>Qt::StrongFocus</enum>
-          </property>
-          <property name="text">
-           <string>BT.601</string>
           </property>
          </widget>
         </item>
         <item row="2" column="0">
-         <widget class="QPushButton" name="btnSmpte240M">
+         <widget class="QComboBox" name="cbxCsMode">
           <property name="minimumSize">
            <size>
             <width>180</width>
@@ -747,13 +728,10 @@
           <property name="focusPolicy">
            <enum>Qt::StrongFocus</enum>
           </property>
-          <property name="text">
-           <string>SMPTE 240M</string>
-          </property>
          </widget>
         </item>
         <item row="3" column="0">
-         <spacer name="verticalSpacer_4">
+         <spacer name="verticalSpacer">
           <property name="orientation">
            <enum>Qt::Vertical</enum>
           </property>
@@ -767,38 +745,6 @@
            </size>
           </property>
          </spacer>
-        </item>
-        <item row="4" column="0">
-         <widget class="QPushButton" name="btnLoad">
-          <property name="minimumSize">
-           <size>
-            <width>180</width>
-            <height>0</height>
-           </size>
-          </property>
-          <property name="focusPolicy">
-           <enum>Qt::StrongFocus</enum>
-          </property>
-          <property name="text">
-           <string>Load Matrx</string>
-          </property>
-         </widget>
-        </item>
-        <item row="5" column="0">
-         <widget class="QPushButton" name="btnSave">
-          <property name="minimumSize">
-           <size>
-            <width>180</width>
-            <height>0</height>
-           </size>
-          </property>
-          <property name="focusPolicy">
-           <enum>Qt::StrongFocus</enum>
-          </property>
-          <property name="text">
-           <string>Save Matrix</string>
-          </property>
-         </widget>
         </item>
        </layout>
       </widget>
@@ -898,66 +844,6 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="1">
-      <widget class="QGroupBox" name="gbxSdiOutput">
-       <property name="minimumSize">
-        <size>
-         <width>0</width>
-         <height>280</height>
-        </size>
-       </property>
-       <property name="title">
-        <string>SDI Output</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignCenter</set>
-       </property>
-       <layout class="QGridLayout" name="gridLayout_2">
-        <item row="0" column="0">
-         <widget class="QComboBox" name="cbxSdiMode">
-          <property name="minimumSize">
-           <size>
-            <width>180</width>
-            <height>0</height>
-           </size>
-          </property>
-          <property name="focusPolicy">
-           <enum>Qt::StrongFocus</enum>
-          </property>
-         </widget>
-        </item>
-        <item row="2" column="0">
-         <widget class="QComboBox" name="cbxCsMode">
-          <property name="minimumSize">
-           <size>
-            <width>180</width>
-            <height>0</height>
-           </size>
-          </property>
-          <property name="focusPolicy">
-           <enum>Qt::StrongFocus</enum>
-          </property>
-         </widget>
-        </item>
-        <item row="3" column="0">
-         <spacer name="verticalSpacer">
-          <property name="orientation">
-           <enum>Qt::Vertical</enum>
-          </property>
-          <property name="sizeType">
-           <enum>QSizePolicy::MinimumExpanding</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>20</width>
-            <height>40</height>
-           </size>
-          </property>
-         </spacer>
-        </item>
-       </layout>
-      </widget>
-     </item>
      <item row="0" column="2">
       <widget class="SingleChannelKnobBox" name="Kblue">
        <property name="minimumSize">
@@ -1053,6 +939,95 @@
        </property>
       </widget>
      </item>
+     <item row="0" column="1">
+      <widget class="QGroupBox" name="RGBtoYCBCr">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>280</height>
+        </size>
+       </property>
+       <property name="title">
+        <string>RGB to YCbCr</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+       <layout class="QGridLayout" name="gridLayout_3">
+        <item row="0" column="0">
+         <widget class="QPushButton" name="btnRec709">
+          <property name="minimumSize">
+           <size>
+            <width>180</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="focusPolicy">
+           <enum>Qt::StrongFocus</enum>
+          </property>
+          <property name="text">
+           <string>Rec.709</string>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="0">
+         <spacer name="verticalSpacer_4">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
+          </property>
+          <property name="sizeType">
+           <enum>QSizePolicy::MinimumExpanding</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>20</width>
+            <height>40</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item row="4" column="0">
+         <widget class="QPushButton" name="btnLoad">
+          <property name="minimumSize">
+           <size>
+            <width>180</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="focusPolicy">
+           <enum>Qt::StrongFocus</enum>
+          </property>
+          <property name="text">
+           <string>Load Matrx</string>
+          </property>
+         </widget>
+        </item>
+        <item row="5" column="0">
+         <widget class="QPushButton" name="btnSave">
+          <property name="minimumSize">
+           <size>
+            <width>180</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="focusPolicy">
+           <enum>Qt::StrongFocus</enum>
+          </property>
+          <property name="text">
+           <string>Save Matrix</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QPushButton" name="btnBt2020">
+          <property name="text">
+           <string>BT.2020</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+     </item>
     </layout>
    </item>
    <item>
@@ -1080,8 +1055,6 @@
  </customwidgets>
  <tabstops>
   <tabstop>btnRec709</tabstop>
-  <tabstop>btnBt601</tabstop>
-  <tabstop>btnSmpte240M</tabstop>
   <tabstop>btnLoad</tabstop>
   <tabstop>btnSave</tabstop>
   <tabstop>Kred</tabstop>
